--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,62 +1,65 @@
 {% extends 'users/profile_base.html' %}
 
 {% block profile_content %}
-<div class="card">
+<div class="card profile-card">
     <div class="card-body">
         <div class="d-flex justify-content-end mb-3">
-            <a href="{% url 'users:profile_update' %}" class="btn btn-sm btn-outline-primary">
+            <a href="{% url 'users:profile_update' %}" class="btn btn-outline-primary">
                 <i class="bi bi-pencil-square me-1"></i> Редактировать профиль
             </a>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <div class="text-center mb-4">
-                    {% if request.user.profile.avatar %}
-                        <img src="{{ request.user.profile.avatar.url }}" class="img-fluid rounded"
-                             alt="Аватар пользователя" style="max-height: 200px;">
-                    {% else %}
-                        <div class="alert alert-secondary">
-                            <i class="fas fa-user-circle fa-5x mb-3"></i>
-                            <p>Аватар не установлен</p>
-                        </div>
-                    {% endif %}
+                    <div class="profile-avatar-container mx-auto">
+                        {% if request.user.profile.avatar %}
+                            <img src="{{ request.user.profile.avatar.url }}" class="profile-avatar"
+                                 alt="Аватар пользователя">
+                        {% else %}
+                            <div class="profile-avatar-placeholder">
+                                <i class="bi bi-person-circle"></i>
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
             <div class="col-md-8">
-                <h4>Личная информация</h4>
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th scope="row">Имя пользователя:</th>
-                            <td>{{ request.user.username }}</td>
-                        </tr>
-                        {% if request.user.first_name %}
-                        <tr>
-                            <th scope="row">Имя:</th>
-                            <td>{{ request.user.first_name }}</td>
-                        </tr>
-                        {% endif %}
-                        {% if request.user.last_name %}
-                        <tr>
-                            <th scope="row">Фамилия:</th>
-                            <td>{{ request.user.last_name }}</td>
-                        </tr>
-                        {% endif %}
-                        <tr>
-                            <th scope="row">Email:</th>
-                            <td>{{ request.user.email }}</td>
-                        </tr>
-                        {% if request.user.profile.bio %}
-                        <tr>
-                            <th scope="row">О себе:</th>
-                            <td>{{ request.user.profile.bio }}</td>
-                        </tr>
-                        {% endif %}
-                    </tbody>
-                </table>
+                <h4 class="card-title"><i class="bi bi-person-badge me-2"></i>Личная информация</h4>
+                <div class="profile-info-table">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th scope="row">Имя пользователя:</th>
+                                <td>{{ request.user.username }}</td>
+                            </tr>
+                            {% if request.user.first_name %}
+                            <tr>
+                                <th scope="row">Имя:</th>
+                                <td>{{ request.user.first_name }}</td>
+                            </tr>
+                            {% endif %}
+                            {% if request.user.last_name %}
+                            <tr>
+                                <th scope="row">Фамилия:</th>
+                                <td>{{ request.user.last_name }}</td>
+                            </tr>
+                            {% endif %}
+                            <tr>
+                                <th scope="row">Email:</th>
+                                <td>{{ request.user.email }}</td>
+                            </tr>
+                            {% if request.user.profile.bio %}
+                            <tr>
+                                <th scope="row">О себе:</th>
+                                <td>{{ request.user.profile.bio }}</td>
+                            </tr>
+                            {% endif %}
+                        </tbody>
+                    </table>
+                </div>
                 <div class="mt-4">
-                    <h5>Управление профилем</h5>
-                    <div class="list-group">
+                    <h5><i class="bi bi-gear me-2"></i>Управление профилем</h5>
+                    <div class="list-group profile-actions">
                         <a href="{% url 'account_change_password' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-lock-fill me-2"></i> Сменить пароль
                         </a>
