--- a/users/templates/users/profile_activity.html
+++ b/users/templates/users/profile_activity.html
@@ -1,26 +1,27 @@
 {% extends 'users/profile_base.html' %}
 
 {% block profile_content %}
-<div class="card">
+<div class="card profile-card">
     <div class="card-body">
-        <h4 class="mb-4">История действий</h4>
+        <h4 class="card-title mb-4"><i class="bi bi-activity me-2"></i>История действий</h4>
 
         {% if empty_activity %}
-            <div class="alert alert-secondary">
+            <div class="alert alert-info">
+                <i class="bi bi-info-circle me-2"></i>
                 <p class="mb-0">История действий отсутствует</p>
             </div>
         {% else %}
-            <ul class="list-group">
+            <div class="activity-timeline">
                 {% for action in user_actions %}
-                    <li class="list-group-item">
+                    <div class="activity-item">
                         <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">{{ action.get_action_type_display }}</h5>
-                            <small>{{ action.timestamp|date:"d.m.Y H:i" }}</small>
+                            <h5 class="activity-title">{{ action.get_action_type_display }}</h5>
+                            <span class="activity-date">{{ action.timestamp|date:"d.m.Y H:i" }}</span>
                         </div>
-                        <p class="mb-1">{{ action.description }}</p>
-                    </li>
+                        <p class="activity-description">{{ action.description }}</p>
+                    </div>
                 {% endfor %}
-            </ul>
+            </div>
         {% endif %}
     </div>
 </div>
