--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -1,9 +1,9 @@
 {% extends 'users/profile_base.html' %}
 
 {% block profile_content %}
-<div class="card">
+<div class="card profile-card">
     <div class="card-body">
-        <h4 class="mb-4">Редактирование профиля</h4>
+        <h4 class="card-title mb-4"><i class="bi bi-pencil me-2"></i>Редактирование профиля</h4>
 
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <h5>Личная информация</h5>
+                        <h5 class="section-subtitle"><i class="bi bi-person me-2"></i>Личная информация</h5>
 
                         <div class="mb-3">
                             <label for="{{ user_form.first_name.id_for_label }}" class="form-label">Имя</label>
@@ -33,7 +33,7 @@
 
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <h5>Профиль</h5>
+                        <h5 class="section-subtitle"><i class="bi bi-person-badge me-2"></i>Профиль</h5>
 
                         <div class="mb-3">
                             <label for="{{ profile_form.avatar.id_for_label }}" class="form-label">Аватар</label>
@@ -42,8 +42,8 @@
                                 <div class="text-danger">{{ profile_form.avatar.errors }}</div>
                             {% endif %}
                             {% if user.profile.avatar %}
-                                <div class="mt-2">
-                                    <img src="{{ user.profile.avatar.url }}" alt="Текущий аватар" class="img-thumbnail" style="max-height: 100px;">
+                                <div class="mt-2 current-avatar">
+                                    <img src="{{ user.profile.avatar.url }}" alt="Текущий аватар" class="img-thumbnail">
                                 </div>
                             {% endif %}
                         </div>
@@ -59,9 +59,15 @@
                 </div>
             </div>
 
+            <div class="section-divider my-4"></div>
+
             <div class="text-end mt-3">
-                <a href="{% url 'users:profile' %}" class="btn btn-secondary me-2">Отмена</a>
-                <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+                <a href="{% url 'users:profile' %}" class="btn btn-secondary me-2">
+                    <i class="bi bi-x-circle me-1"></i>Отмена
+                </a>
+                <button type="submit" class="btn btn-primary">
+                    <i class="bi bi-check-circle me-1"></i>Сохранить изменения
+                </button>
             </div>
         </form>
     </div>
