--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -47,7 +47,7 @@
 
             <!-- Содержание статьи -->
             <div class="article-content">
-                <p class="card-text">{{ article.content }}</p>
+                {{ article.content|linebreaks }}
             </div>
 
             <!-- Теги и автор -->
